feat: added simulation stepping